# cresowlve

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.html
experiments/: compute_usage_and_cost.sh  prepare_task_data.sh
experiments/benchmarking/: evaluate_lm.sh  inference_lm.sh  prepare_eval_data.sh  prepare_task_data.sh
experiments/culture_lang_annot/: inference_lm.sh  prepare_eval_data.sh  prepare_task_data.sh  shots.json
experiments/data_contamination/: compute_metrics.sh  inference_lm.sh  prepare_eval_data.sh  prepare_task_data.sh
experiments/domain_annot/: compute_metrics.sh  domain_mapping.json  inference_lm.sh  prepare_eval_data.sh  prepare_task_data.sh  shots.json
experiments/error_annot/: inference_lm.sh  prepare_eval_data.sh  prepare_task_data.sh  shots.json
experiments/ext_mat_annot/: inference_lm.sh  prepare_eval_data.sh  prepare_task_data.sh
experiments/human_annot/: prepare_human_annot_data.sh  prepare_task_data.sh
experiments/knowledge_annot/: compute_metrics.sh  inference_lm.sh  prepare_eval_data.sh  prepare_task_data.sh  shots.json
experiments/knowledge_source_annot/: inference_lm.sh  prepare_eval_data.sh  prepare_task_data.sh  shots.json
experiments/reasoning_type_annot/: inference_lm.sh  shots.json  (+2 more)
notebooks/: culture_lang_analysis.ipynb  data_stats.ipynb  difficulty_analysis.ipynb  domain_analysis.ipynb  error_analysis.ipynb  hf_benchmark.ipynb  knowledge_analysis.ipynb  knowledge_source_analysis.ipynb  length_analysis.ipynb  playground.ipynb  reasoning_type_analysis.ipynb  results.ipynb  results.json
(+17 files in other folders)
