[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cresowlve"
readme = "README.md"
license = { file = "LICENSE" }
version = "0.0.1"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["src/cresowlve"]

[tool.isort]
known_third_party = ["wandb"]
